# docuparse

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  mise.toml  rust-toolchain.toml
.github/workflows/: release-plz.yml
src/: error.rs  lib.rs  metadata.rs  pdf_document.rs  pdfium_singleton.rs  render.rs  text.rs  validation.rs
src/utils/: constants.rs
