[package]
name = "docuparse"
version = "0.0.2"
edition = "2024"
description = "Document extraction and parsing — PDF text, rendering, and OCR"
license = "MIT"
repository = "https://github.com/asincole/docuparse"
keywords = ["pdf", "document", "extraction", "ocr", "parsing"]
categories = ["text-processing", "parser-implementations"]
exclude = [
    "examples/",
    "examples/fixtures/",
    "mise.toml",
    "mise.local.toml",
    "rust-toolchain.toml",
    "rustfmt.toml",
]

[dependencies]
bon = "3.9.1"
image = "0.25.10"
once_cell = "1.21.4"
pdfium-render = { version = "0.9.0" }
thiserror = "2.0.18"

[dev-dependencies]
color-eyre = "0.6.5"
eyre = "0.6.12"
lopdf = "0.40.0"
rstest = "0.26.1"
tempfile = "3.27.0"
fake = { version = "5.1.0", features = ["derive"] }

[profile.dev]
opt-level = 1
debug = true
overflow-checks = true

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
debug = false
panic = "abort"

[profile.bench]
inherits = "release"
debug = true
